# prism

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: debug_bytecode.rs
prism_cli/src/: main.rs  pipeline.rs  repl.rs
prism_compiler/: Cargo.toml
prism_compiler/examples/: debug_tuple.rs
prism_compiler/src/: bytecode.rs  class_compiler.rs  compiler.rs  lib.rs
prism_compiler/src/bytecode/: builder.rs  instruction.rs
prism_compiler/src/match_compiler/: codegen.rs  decision_tree.rs  matrix.rs  mod.rs  pattern.rs
prism_compiler/src/scope/: closure.rs
prism_compiler/tests/: async_tests.rs  closure_tests.rs  exception_tests.rs  keyword_args_tests.rs  lambda_listcomp_tests.rs  match_tests.rs  method_call_tests.rs  with_tests.rs
prism_core/: Cargo.toml
prism_core/benches/: small_int_cache.rs
prism_core/src/: error.rs  intern.rs  lib.rs  small_int_cache.rs  span.rs  speculation.rs  value.rs
prism_gc/: Cargo.toml
prism_gc/src/: gc_array.rs  tlab.rs
prism_gc/src/barrier/: mod.rs  satb_buffer.rs  satb_tests.rs
prism_gc/src/collector/: concurrent_major.rs  concurrent_major_tests.rs  concurrent_marker.rs  concurrent_marker_tests.rs  integration_tests.rs  mark_bitmap.rs  mark_bitmap_tests.rs  mod.rs
prism_jit/src/: lib.rs
prism_jit/src/codegen/: mod.rs
prism_jit/src/ic/: call_ic.rs  hooks.rs  ic_runtime.rs  integration_tests.rs  invalidation.rs  jit_listener.rs  mega_ic.rs  mod.rs  poly_ic.rs  property_ic.rs
prism_jit/src/opt/: copy_prop.rs  dce.rs  (+7 more)
prism_runtime/: Cargo.toml
prism_runtime/src/: gc.rs  gc_trace.rs  lib.rs  object.rs
prism_runtime/src/object/: metaclass.rs  mro.rs  shaped_object.rs  type_obj.rs
prism_runtime/src/object/descriptor/: classmethod.rs  method.rs  mod.rs  property.rs  slot.rs  staticmethod.rs
prism_runtime/src/types/: cell.rs  dict.rs  list.rs  mod.rs  string.rs
prism_vm/: Cargo.toml
prism_vm/benches/: deopt_osr.rs  gc_pauses.rs  jit_speedup.rs  speculation.rs  string_ops.rs
prism_vm/src/: allocator.rs  compilation_queue.rs  dispatch.rs  error.rs  frame.rs  jit_bridge.rs  jit_context.rs  jit_executor.rs  lib.rs  profiler.rs  tier1_lowering.rs  vm.rs
prism_vm/src/builtins/: execution.rs  functions.rs  introspect.rs  iter_dispatch.rs  itertools.rs  numeric.rs  string.rs  types.rs
prism_vm/src/exception/: exc_info_stack.rs  exception_ref.rs  handler_cache.rs  handler_stack.rs  mod.rs  state.rs  unwind.rs
prism_vm/src/import/: resolver.rs
prism_vm/src/ops/: arithmetic.rs  calls.rs  class.rs  comparison.rs  containers.rs  control.rs  load_store.rs  mod.rs  objects.rs
prism_vm/src/ops/coroutine/: end_async_for.rs  get_aiter.rs  get_anext.rs  get_awaitable.rs  mod.rs  protocol.rs  send.rs  tests.rs
prism_vm/src/ops/method_dispatch/: call_method.rs
prism_vm/src/stdlib/: mod.rs
prism_vm/src/stdlib/exceptions/: flags.rs  flyweight.rs  hierarchy.rs  mod.rs  object.rs  table.rs  traceback.rs  types.rs
prism_vm/src/stdlib/functools/: cached_property.rs  cmp.rs  lru_cache.rs  mod.rs  partial.rs  reduce.rs  tests.rs  wraps.rs
prism_vm/src/stdlib/generators/: iterator.rs  methods.rs  mod.rs  object.rs  resume.rs  state.rs  storage.rs
prism_vm/src/stdlib/io/: bytes_io.rs  mod.rs  open_fn.rs  string_io.rs  tests.rs
prism_vm/src/stdlib/itertools/: combinatoric.rs  grouping.rs  infinite.rs  mod.rs  recipes.rs  terminating.rs  tests.rs
prism_vm/src/stdlib/math/: angular.rs  basic.rs  classify.rs  combinatorics.rs  constants.rs  exp_log.rs  hyperbolic.rs  mod.rs  power.rs  special.rs  trig.rs
prism_vm/src/stdlib/os/: environ.rs
prism_vm/src/stdlib/os/path/: compare.rs  mod.rs  query.rs  split.rs  time_access.rs
prism_vm/src/stdlib/sys/: argv.rs  mod.rs  paths.rs
prism_vm/tests/: async_integration.rs  attribute_tests.rs  exception_integration.rs  gc_allocation_tests.rs  integration.rs  membership_tests.rs  speculation_e2e.rs  unpacking_tests.rs
prism_vm/tests/jit/: arithmetic.rs  control.rs  mod.rs  test_utils.rs
(+66 files in other folders)
