[package]
name = "prism_core"
description = "Core types and traits for the Prism Python runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
rustc-hash.workspace = true
bumpalo.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
parking_lot.workspace = true

[dev-dependencies]
