[package]
name = "prism_vm"
description = "High-performance virtual machine for Prism with tiered execution"
version.workspace = true
edition.workspace = true

[dependencies]
prism_core.workspace = true
prism_compiler.workspace = true
prism_runtime.workspace = true

# High-performance collections
rustc-hash = "2.0"

[dev-dependencies]
criterion = "0.5"
