[package]
name = "prism_vm"
description = "High-performance virtual machine for Prism with tiered execution"
version.workspace = true
edition.workspace = true

[dependencies]
prism_core.workspace = true
prism_compiler.workspace = true
prism_runtime.workspace = true
prism_gc.workspace = true
prism_jit.workspace = true

# High-performance collections
rustc-hash = "2.0"
smallvec = "1.13"

# Math functions (gamma, erf, etc.)
libm = "0.2"

[dev-dependencies]
criterion = "0.5"
prism_parser.workspace = true

[[bench]]
name = "speculation"
harness = false

[[bench]]
name = "string_ops"
harness = false

[[bench]]
name = "jit_speedup"
harness = false

[[bench]]
name = "gc_pauses"
harness = false

[[bench]]
name = "deopt_osr"
harness = false

